--- a/src/components/places_list/places_list.css
+++ b/src/components/places_list/places_list.css
@@ -1,6 +1,7 @@
 .PlacesList {
     margin: 0;
     padding: 0;
+    text-align: left;
 }
 
 .PlacesList div {
@@ -16,13 +17,15 @@
     font: bold 20px/1.5 Helvetica, Verdana, sans-serif;
 }
 
-.PlacesList li img {
+.PlacesList li>img {
     float: left;
     margin: 0 15px 0 0;
+    height: 100px;
+    width: 100px;
 }
 
-.PlacesList li p {
-    font: 200 12px/1.5 Georgia, Times New Roman, serif;
+.PlacesList li>p {
+    font: 200 18px/1.5 Georgia, Times New Roman, serif;
 }
 
 .PlacesList li {
