--- a/src/App.css
+++ b/src/App.css
@@ -58,20 +58,6 @@ body, #root, .page-wrapper {
   outline: none;
 }
 
-.Demo__autocomplete-container {
-  border-bottom: honeydew;
-  border-left: honeydew;
-  border-right: honeydew;
-  border-top: 1px solid #e6e6e6;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  border-radius: 0 0 2px 2px;
-}
-
-.Demo__suggestion-item {
-  padding: 4px;
-  text-align: left;
-}
-
 .Demo__dropdown-footer {
   display: flex;
   justify-content: flex-end;
@@ -146,4 +132,32 @@ body, #root, .page-wrapper {
 @-o-keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
+}
+
+.search-bar {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.suggestion-item {
+  padding: 4px;
+  text-align: left;
+}
+
+.autocomplete-container {
+  position: absolute;
+  z-index: 1001;
+  border-bottom: honeydew;
+  border-left: honeydew;
+  border-right: honeydew;
+  border-top: 1px solid #e6e6e6;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  border-radius: 0 0 2px 2px;
+}
+
+.address-container {
+  display: inline-block;
+  width: 25%;
 }
