--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,24 +1,28 @@
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+#header {
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    background: #fff;
+    cursor: default;
+    height: 6em;
+    left: 0;
+    line-height: 6em;
+    /*position: fixed;*/
+    top: 0;
+    width: 100%;
+    z-index: 10001;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.075);
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
-}
-
-.App-title {
-    font-size: 1.5em;
-}
-
-.App-intro {
-    font-size: large;
-}
-
-@keyframes App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+#header .logo {
+    color: #f6755e;
+    font-family: "Pacifico", cursive;
+    font-size: 2.5em;
+    letter-spacing: 2px;
+    margin-top: -5px;
+    text-decoration: none;
+    display: inline-block;
 }
