--- a/src/App.css
+++ b/src/App.css
@@ -180,5 +180,15 @@ body, #root, .page-wrapper {
 }
 
 .transport-button {
-  float: right;
+  background-color: rgba(1, 1, 1, 0);
+}
+
+.btn2 {
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn2:hover {
+  background: #b5bec4;
+  text-decoration: none;
 }
