--- a/src/components/places_list/places_list.css
+++ b/src/components/places_list/places_list.css
@@ -17,7 +17,7 @@ body{background: #24C6DC;  /* fallback for old browsers */
     list-style-type: none;
 }
 .PlacesList .head{float:left;width:100%;}
-.PlacesList .search-box{width:90%; margin:0 auto 40px; height: 800px; box-shadow:10px 13px 0 rgba(0,0,0,0.2);}
+.PlacesList .search-box{width:90%; margin:0 auto 40px; box-shadow:10px 13px 0 rgba(0,0,0,0.2);}
 .PlacesList .listing-block{background:#fff; height:500px; padding-top:20px; overflow-y:scroll;}
 .PlacesList .slimScrollDiv{width:41%!important;}
 .PlacesList .media {background:#fff; position:relative; margin-bottom:15px;}
