--- a/src/components/places_list/places_list.css
+++ b/src/components/places_list/places_list.css
@@ -5,6 +5,9 @@
     text-align: left;
 }
 
+.PlacesList section {
+    height: 734px !important;
+}
 .PlacesList h2{float:left; width:100%; color:#fff; margin-bottom:40px; font-size: 14px; position:relative; z-index:3; margin-top:30px}
 .PlacesList h2 span{font-family: 'Libre Baskerville', serif; display:block; font-size:45px; text-transform:none; margin-bottom:20px; margin-top:30px; font-weight:700}
 .PlacesList h2 a{color:#fff; font-weight:bold;}
@@ -17,9 +20,9 @@ body{background: #24C6DC;  /* fallback for old browsers */
     list-style-type: none;
 }
 .PlacesList .head{float:left;width:100%;}
-.PlacesList .search-box{width:100%; margin:0 auto 40px; height: 800px; box-shadow:10px 13px 0 rgba(0,0,0,0.2);}
-.PlacesList .listing-block{background:#fff; height:800px; padding-top:20px; overflow-y:scroll;}
-.PlacesList .slimScrollDiv{width:41%!important; height:640px !important;}
+.PlacesList .search-box{width:100%; margin:0 auto 40px; height: 734px !important; box-shadow:10px 13px 0 rgba(0,0,0,0.2);}
+.PlacesList .listing-block{background:#fff; height:734px !important; padding-top:20px; overflow-y:scroll;}
+.PlacesList .slimScrollDiv{width:41%!important; height:734px !important;}
 .PlacesList .media {background:#fff; position:relative; margin-bottom:15px;}
 .PlacesList .media img{width:200px;margin:0; height:160px;}
 .PlacesList .media-body{border:1px solid #bcbcbc; border-left:0; height:160px;}
