--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -4,10 +4,18 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    animation: spin 2s linear infinite;
+    animation: spin 1.5s linear infinite;
+    margin: auto;
+    margin-left: 40%;
+    margin-top: 20%;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.loading span {
+    font-size: 50px;
+    padding-left: 37%;
 }
