--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
   text-align: center;
 }
 
