--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,8 +18,9 @@
 }
 
 #header .logo {
-    color: #f6755e;
-    font-family: "Pacifico", cursive;
+    color: #ff6f00;
+    font-family: "Open Sans", "Pacifico", cursive;
+    font-stretch: condensed;
     font-size: 2.5em;
     letter-spacing: 2px;
     margin-top: -5px;
